# metealologia-backend

./: .env  .env.development  .gitignore  Dockerfile  README.md  dev.env  dev_logging.yaml  dev_stations.yaml  dummy_stations.yaml  pyproject.toml  sample_stations.yaml
metealologia_api/: __init__.py  config.py  main.py
metealologia_api/atcs/: __init__.py
metealologia_api/database/: __init__.py  models.py  session.py
metealologia_api/database/sql/: __init__.py  schema.py
metealologia_api/stations/: __init__.py  reports.py
metealologia_backend/: __init__.py  config.py  main.py
metealologia_backend/atcs/airship/: __init__.py  path.py
metealologia_backend/database/: __init__.py  models.py  session.py
metealologia_backend/database/sql/: __init__.py
metealologia_backend/stations/: __init__.py  reports.py
tests/: .env.test  conftest.py  test.env  test_static.py  test_stations.py  test_stations.yaml
