[tool.poetry]
name = "metealologia-api"
version = "0.1.0"
description = "API service for the Metealologia project"
authors = ["Asapros <asapros@wp.pl>"]
readme = "README.md"
packages = [{include = "metealologia_api"}]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.0.3"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiosqlite = "^0.20.0"

[tool.pytest_env]
ENVFILE = "test.env"

[tool.poetry.scripts]
start = "metealologia_api.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.1.3"
pytest-faker = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"